# zenn-hack-backend

./: .gitignore  API_DOCUMENTATION.md  Dockerfile  ERROR_HANDLING_RULES.md  MAIN_PY_INCONSISTENCY_CHECK.md  README.md  __init__.py  conftest.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_cases.md  test_word_processor.py
.github/workflows/: cd.yml
config/: settings.py
models/: types.py
schemas/: word_schema.py
services/: translation_service.py  word_service.py
src/: __init__.py
src/config/: settings.py
src/models/: __init__.py  enums.py  types.py
src/models/exceptions/: __init__.py  service_exception.py
src/schemas/: comparison_schema.py  flashcard_schema.py  meanings_schema.py  media_schema.py  prompt_template_schema.py  words_schema.py
src/services/: add_using_flashcard.py  compare_medias.py  firestore_service.py  generate_and_store_image.py  generate_media.py  get_flashcard_list.py  get_not_compared_media_list.py  get_word_for_extension.py  setup_default_flashcard.py  setup_flashcard.py  setup_media.py  setup_user.py  setup_word_and_meaning.py  update_flashcard.py  update_flasshcard.py  words_api_service.py
src/services/firebase/: create_word_and_meaning.py
src/services/firestore/: create_word_and_meaning.py  firestore_comparison.py  firestore_flashcard.py  firestore_meaning.py  firestore_media.py  firestore_prompt_template.py  firestore_user.py  firestore_word.py
src/services/gemini/: sample.py
src/services/google_ai/: generate_explanation_and_core_meaning.py  translation.py  (+4 more)
test/: test_cases.md  test_firestore.py  test_firestore_set_flashcard.py  test_main.py  test_words_api.py
test/firestore/: firestore_comparison.py  firestore_flashcard.py  firestore_meaning.py  firestore_media.py  firestore_prompt_template.py  firestore_sample_data.py  firestore_user.py  firestore_word.py
(+41 files in other folders)
